protects against:   - Session hijacking attacks   - Session fixation vulnerabilities   - Man-in-the-middle attacks   - Cross-site scripting (XSS)   - Cross-site request forgery (CSRF)   - Replay attacks   - Brute force attempts

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,6 @@ backup.sh
 
 # Log files (runtime data, can be large, may contain sensitive info)
 logs/*.log
+
+# Integration documentation (internal use only)
+SECURITY_INTEGRATION.md
